--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
 httplib2
 oauth2
-dbfpy
+# dbfpy
 simplejson
 sorl-thumbnail
 PIL
 pytz
-
 twitter
 simplegeo
-
 django>=1.3
 django-registration
 django-pagination
