--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ httplib2
 oauth2
 # dbfpy
 simplejson
-sorl-thumbnail
 PIL
 pytz
 twitter
@@ -11,4 +10,5 @@ django>=1.3
 django-registration
 django-pagination
 django-ratings
+sorl-thumbnail==3.2.5
 git+git://github.com/phxdata/django-sorting.git
